<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.enjoyshop.widget.EnjoyshopToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:isShowLeftIcon="true"
        app:title="@string/my_center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/user_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/default_head" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="197dp"
                    android:layout_height="48dp"
                    android:gravity="right|center"
                    android:text="@string/sex"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <com.enjoyshop.widget.ClearEditText
                    android:id="@+id/user_sex"
                    style="@style/editText_base"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="128dp"
                    android:layout_marginRight="128dp"
                    android:drawablePadding="20dp"
                    android:enabled="false"
                    android:hint="男"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
            <View
                style="@style/line_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="167dp"
                    android:layout_height="48dp"
                    android:gravity="right|center"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <com.enjoyshop.widget.ClearEditText
                    android:id="@+id/user_name"
                    style="@style/editText_base"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="128dp"
                    android:layout_marginRight="128dp"
                    android:drawablePadding="20dp"
                    android:hint="我是小红"
                    android:enabled="false"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
            <View
                style="@style/line_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="146dp"
                    android:layout_height="48dp"
                    android:gravity="right|center"
                    android:text="@string/tel"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <com.enjoyshop.widget.ClearEditText
                    android:id="@+id/user_tel"
                    style="@style/editText_base"
                    android:layout_width="237dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="128dp"
                    android:layout_marginRight="128dp"
                    android:drawablePadding="20dp"
                    android:hint="17535434475"
                    android:enabled="false"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
            <View
                style="@style/line_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="103dp"
                    android:layout_height="48dp"
                    android:gravity="right|center"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <com.enjoyshop.widget.ClearEditText
                    android:id="@+id/user_email"
                    style="@style/editText_base"
                    android:layout_width="268dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="128dp"
                    android:layout_marginRight="128dp"
                    android:drawablePadding="20dp"
                    android:enabled="false"
                    android:hint="1127437849@qq.com"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
            <View
                style="@style/line_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="94dp"
                    android:layout_height="48dp"
                    android:gravity="right|center"
                    android:text="@string/idcard"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <com.enjoyshop.widget.ClearEditText
                    android:id="@+id/user_idcard"
                    style="@style/editText_base"
                    android:layout_width="271dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="128dp"
                    android:enabled="false"
                    android:layout_marginRight="128dp"
                    android:drawablePadding="20dp"
                    android:hint="140926999999999999"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
            <View
                style="@style/line_vertical"/>
            <Button
                android:id="@+id/change_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_style_grey"
                android:text="修改资料"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_vertical_margin" />
            <View
                style="@style/line_vertical"/>
            <Button
                android:id="@+id/change_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_style_grey"
                android:text="修改密码"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_vertical_margin" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>